# rackspace-sdk-plugin

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
rackspace/: connection.py  profile.py  user_preference.py
rackspace/auth/identity/: rackspace.py
rackspace/backup/: backup_service.py
rackspace/backup/v1/: _proxy.py  activity.py  agent.py  backup_configuration.py  restore_configuration.py
rackspace/database/: database_service.py
rackspace/database/v1/: _proxy.py  backup.py  backup_schedule.py  ha.py  high_availability_instance.py
rackspace/message/v1/: _proxy.py
rackspace/monitoring/v1/: _proxy.py  agent_token.py  alarm.py  check.py  entity.py  monitoring_zone.py  notification.py  notification_plan.py  suppression.py
rackspace/tests/auth/identity/: test_rackspace.py
rackspace/tests/backup/v1/: test_agent.py  test_backup_configuration.py  test_proxy.py
rackspace/tests/database/: test_database_service.py
rackspace/tests/database/v1/: test_backup.py  test_ha.py  test_high_availability_instance.py  test_proxy.py
rackspace/tests/object_store/v1/: test_proxy.py
rackspace/tests/unit/: test_connection.py
rackspace/tests/unit/database/: test_database_service.py
rackspace/tests/unit/database/v1/: test_high_availability_instance.py  test_proxy.py
rackspace/tests/unit/monitoring/v1/: test_agent_token.py  test_alarm.py  test_check.py  test_entity.py  test_monitoring_zone.py  test_notification.py  test_notification_plan.py  test_suppression.py
rackspace/tests/unit/object_store/v1/: test_proxy.py
