[metadata]
name = rackspace-sdk-plugin
version = 0.2.1
summary = Rackspace plugin for the OpenStack SDK
description-file =
    README.rst
author = Rackspace
author-email = sdk-support@rackspace.com
home-page = https://developer.rackspace.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    rackspace

[wheel]
universal = 1

[entry_points]
openstack.auth.plugin =
    rackspace_token = rackspace.auth.identity.rackspace:Token
    rackspace_password = rackspace.auth.identity.rackspace:Password
    rackspace = rackspace.auth.identity.rackspace:Discoverable
